<resources>
    <string name="all_restaurants">All</string>
    <string name="search_view_text">Search in All</string>
    <string name="app_name">FoodOrderingApplication</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev">Prev</string>
    <string name="first_delivery">First delivery</string>
    <string name="your_orders_right_at_your_door_with_fast_delivery">Your orders right at your door with fast delivery</string>
    <string name="enjoy_the_food_delivered_to_your_door">Enjoy the food delivered to your door</string>
    <string name="enjoy_your_meal">Enjoy your meal</string>
    <string name="choose_the_food_you_want_to_eat">Choose the food you want to eat</string>
    <string name="choose_the_food_you_want_to_eat_from_the_restaurant_of_your_choice">Choose the food you want to eat from the restaurant of your choice</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="please_enter_your_informations_for_register">Please enter your informations for register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingredients">Ingredients</string>
    <string name="order">Order</string>
    <string name="orders">Orders</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="menu">Menu</string>
    <string name="discover_restaurants">Discover Restaurants</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="foodizone">Foodizone</string>
    <string name="response_not_found">Response_not_found</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="update_name">Update Name</string>
    <string name="update_address">Update Address</string>
    <string name="update_email">Update Email</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="settings">Settings</string>
    <string name="update_profile">Update Profile</string>

    <string-array name="Cuisines">
        <item>Burger</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Seafood</item>
        <item>Pasta - Salad</item>
    </string-array>
</resources>