<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/userInformationCardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textViewUpdateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="180dp"
            android:hint="@string/update_name"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="8dp"
            android:fontFamily="@font/open_sans_light"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/textViewUpdateEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginStart="180dp"
            android:hint="@string/update_email"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="8dp"
            android:fontFamily="@font/open_sans_light"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/textViewUpdateAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginStart="20dp"
            android:hint="@string/update_address"
            android:drawableStart="@drawable/location"
            android:drawablePadding="8dp"
            android:fontFamily="@font/open_sans_light"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/textViewUpdatePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginStart="20dp"
            android:hint="@string/update_phone_number"
            android:drawableStart="@drawable/telephone"
            android:drawablePadding="8dp"
            android:fontFamily="@font/open_sans_light"
            android:textColorHint="@color/gray"
            android:inputType="number"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextFields" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mealImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/avatar"
                android:background="#FAF8F8"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/yellow_background"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewOrders"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:fontFamily="@font/open_sans_semi_bold_italic"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/et_border"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>