<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/itemLoginCardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/light_yellow"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/loginIcon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/login1" />

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/sign_in"
                android:textColor="@color/gray"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLoginCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnterAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_enter_your_account_here"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/loginEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="35dp"
                android:layout_weight="15"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="10dp"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="35dp"
                android:layout_weight="5"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/et_border"
        android:fontFamily="@font/open_sans_regular"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/yellow_background"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/et_border"
        android:fontFamily="@font/open_sans_regular"
        android:padding="12dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>