<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/registerCardView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/light_yellow"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp"
        app:contentPadding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/registerIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/register_card" />

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/register"
                android:textColor="@color/gray"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRegisterCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEnterInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/please_enter_your_informations_for_register"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerFullNameTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:background="@drawable/et_border"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_light"
                android:backgroundTint="@color/white"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnterAccount" />

            <EditText
                android:id="@+id/registerEmailTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:background="@drawable/et_border"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_light"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnterAccount" />

            <EditText
                android:id="@+id/registerPasswordTextView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="5"
                android:background="@drawable/et_border"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewDoYouHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/do_you_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/et_border"
        android:fontFamily="@font/open_sans_regular"
        android:padding="12dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>